--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "react-spinners": "^0.13.8",
     "zod": "^3.22.4"
   },
   "devDependencies": {
